--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "arrowParens": "always",
   "overrides": [
